[build-system]
# Build dependencies
requires = ['meson-python',
            'meson==1.8.4',
            'numpy',
            'mypy>=1.10.0',
            'cxxheaderparser==1.6.0']
build-backend = 'mesonpy'

[tool.meson-python.args]
setup = ['-Dbuild_docs_tests_examples=false',
         '-Dmain_library=false',
         '-Dpython_bindings=true',
         '-Dgdal_extensions=disabled',
         '-Dget_navtk_data=true',
         '-Dfirehose-outputs:aspn-cpp-xtensor=disabled',
         '-Dfirehose-outputs:aspn-cpp-xtensor-py=enabled',
         '-Dfirehose-outputs:aspn-c-main-library=false']
install = ['--tags=runtime,python-runtime']

[project]
# Runtime dependencies
dependencies = ['numpy']
name = 'navtk'
dynamic = ['version']
description = 'NavToolkit Python Bindings'

[tool.cibuildwheel.linux]
before-all = "yum install openblas-devel -y"

[[tool.cibuildwheel.overrides]]
select = "*armv7*"
before-all = """
  apt-get update &&
  apt-get install -y libopenblas-dev gcc-10 g++-10 &&
  update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 60 &&
  update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 60
"""

[tool.pytest.ini_options]
norecursedirs = ["subprojects"]
